test/libyul/yulSyntaxTests/if_statement_invalid_3.yul
{
    if 32 let x := 3
}
// ====
// dialect: yul
// ----
// ParserError 2314: (12-15='let'): Expected '{' but got reserved keyword 'let'
